--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/router": "~11.2.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.33.0",
+    "@ionic-native/native-audio": "^5.33.0",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
