--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -14,6 +14,8 @@
   "author": "Emely Garcia",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.912.0"
+    "aws-sdk": "^2.912.0",
+    "dotenv": "^10.0.0",
+    "uuid": "^8.3.2"
   }
 }
