--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -7,7 +7,8 @@
     "test": "npm test",
     "build": "tsc",
     "start": "nodemon ./src/index.ts",
-    "prod": " tsc && node dist/index.js"
+    "prod": " tsc && node dist/index.js",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix"
   },
   "keywords": [
     "backend",
@@ -24,8 +25,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.27.0",
     "nodemon": "^2.0.7",
-    "tslint": "^6.1.3",
     "typescript": "^4.2.4"
   }
 }
