--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -7,8 +7,7 @@
     "test": "npm test",
     "build": "tsc",
     "start": "nodemon ./src/index.ts",
-    "prod": " tsc && node dist/index.js",
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix"
+    "prod": " tsc && node dist/index.js"
   },
   "keywords": [
     "backend",
