--- a/backend-app/tsconfig.json
+++ b/backend-app/tsconfig.json
@@ -12,7 +12,7 @@
      "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
      "noUnusedLocals": true,                /* Report errors on unused locals. */
      //"noUnusedParameters": true,            /* Report errors on unused parameters. */
-     "noImplicitReturns": true,             /* Report error when not all code paths in function return a value. */
+     "noImplicitReturns": false,             /* Report error when not all code paths in function return a value. */
      "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
      "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
       // "types": [],                           /* Type declaration files to be included in compilation. */
