--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -18,11 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.912.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
