--- a/admin-app/.graphqlconfig.yml
+++ b/admin-app/.graphqlconfig.yml
@@ -2,11 +2,11 @@ projects:
   randomaq:
     schemaPath: src/graphql/schema.json
     includes:
-      - src/graphql/**/*.ts
+      - src/graphql/**/*.graphql
     excludes:
       - ./amplify/**
     extensions:
       amplify:
-        codeGenTarget: typescript
-        generatedFileName: src/API.ts
+        codeGenTarget: angular
+        generatedFileName: src/app/services/API.service.ts
         docsFilePath: src/graphql
