--- a/admin-app/amplify/backend/backend-config.json
+++ b/admin-app/amplify/backend/backend-config.json
@@ -1,3 +1,20 @@
 {
-  "api": {}
+  "api": {
+    "randomaq": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "API_KEY",
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 7,
+              "description": "questions and categories"
+            }
+          },
+          "additionalAuthenticationProviders": []
+        }
+      }
+    }
+  }
 }
