add lambda function

--- a/admin-app/amplify/backend/backend-config.json
+++ b/admin-app/amplify/backend/backend-config.json
@@ -31,5 +31,12 @@
       "providerPlugin": "awscloudformation",
       "type": "manual"
     }
+  },
+  "function": {
+    "randomaq11getquestion": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
   }
 }
