--- a/admin-app/amplify/backend/backend-config.json
+++ b/admin-app/amplify/backend/backend-config.json
@@ -37,6 +37,11 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "randomquestion": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   }
 }
