--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -18,12 +18,14 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.912.0",
+    "chance": "^1.1.7",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/chance": "^1.1.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/uuid": "^8.3.0",
