using export env

--- a/backend-app/.env-template
+++ b/backend-app/.env-template
@@ -1,6 +1,6 @@
 aws_dynamo_acces_key=XXXXXXXXXXXXXXXXXXXXX
 aws_dynamo_secret_key=XXXXXXXXXXXXXXXXXXXX
-
+jwt_secret_key=XXXXXXXXXXXXXXXXXXXX
 /*
 Replace the XXXX pattern with your aws keys and remove this instructions. 
 Then, rename this file as .env. 
