--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "bcryptjs": "^2.4.3",
     "ngx-spinner": "^11.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "~12.0.1",
     "@angular/cli": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
