fix npm command

--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm test",
     "build": "tsc",
-    "start": "nodemon ./src/index.ts",
+    "dev": "nodemon ./src/index.ts",
+    "start": "node dist/index.js",
     "prod": " tsc && node dist/index.js"
   },
   "keywords": [
