--- a/ionic-app/capacitor.config.json
+++ b/ionic-app/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "random-aq",
+  "appName": "randomAQ",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
@@ -9,5 +9,9 @@
       "launchShowDuration": 0
     }
   },
-  "cordova": {}
+  "cordova": {},
+  "server": {
+    "url": "http://192.168.1.57:8100",
+    "cleartext": true
+  }
 }
